<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.evanskistudios</groupId>
    <artifactId>rm</artifactId>
    <version>2.4.0</version>
    <packaging>jar</packaging>
    <name>RaccoonMischief</name>

    <description>Raccoons</description>
    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
          <plugins>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>3.8.1</version>
                  <configuration>
                      <source>${java.version}</source>
                      <target>${java.version}</target>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-shade-plugin</artifactId>
                  <version>3.2.4</version>
                  <executions>
                      <execution>
                          <phase>package</phase>
                          <goals>
                              <goal>shade</goal>
                          </goals>
                          <configuration>
                              <createDependencyReducedPom>false</createDependencyReducedPom>
                          </configuration>
                      </execution>
                  </executions>
              </plugin>
              <plugin>
                  <!-- .m2\repository\org\apache\maven\plugins\maven-jar-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
            </plugin>
            <plugin>
                <groupId>net.md-5</groupId>
                <artifactId>specialsource-maven-plugin</artifactId>
                <version>1.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                        <id>remap-obf</id>
                        <configuration>
                            <srgIn>org.spigotmc:minecraft-server:1.20.1-R0.1-SNAPSHOT:txt:maps-mojang</srgIn>
                            <reverse>true</reverse>
                            <remappedDependencies>org.spigotmc:spigot:1.20.1-R0.1-SNAPSHOT:jar:remapped-mojang</remappedDependencies>
                            <remappedArtifactAttached>true</remappedArtifactAttached>
                            <remappedClassifierName>remapped-obf</remappedClassifierName>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                         </configuration>
                     </execution>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>remap</goal>
                         </goals>
                         <id>remap-spigot</id>
                         <configuration>
                             <inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
                             <srgIn>org.spigotmc:minecraft-server:1.20.1-R0.1-SNAPSHOT:csrg:maps-spigot</srgIn>
                             <remappedDependencies>org.spigotmc:spigot:1.20.1-R0.1-SNAPSHOT:jar:remapped-obf</remappedDependencies>

                             <outputDirectory>D:\Minecraft\_Paper_server\plugins</outputDirectory>

                             <finalName>RaccoonMischief-${project.version}</finalName>

                         </configuration>
                     </execution>
                 </executions>
             </plugin>
          </plugins>
          <resources>
              <resource>
                  <directory>src/main/resources</directory>
                  <filtering>true</filtering>
              </resource>
          </resources>
      </build>

      <repositories>
          <repository>
              <id>spigotmc-repo</id>
              <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
          </repository>
          <repository>
              <id>sonatype</id>
              <url>https://oss.sonatype.org/content/groups/public/</url>
          </repository>
      </repositories>

      <dependencies>
          <dependency>
              <groupId>org.spigotmc</groupId>
              <artifactId>spigot</artifactId>
              <version>1.20.1-R0.1-SNAPSHOT</version>
              <classifier>remapped-mojang</classifier>
              <scope>provided</scope>
          </dependency>
      </dependencies>
  </project>
